--- a/src/static/index.html
+++ b/src/static/index.html
@@ -11,6 +11,7 @@
     <link href="/static/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Courgette|Farsan|Fugaz+One|Pacifico|Pattaya|Racing+Sans+One|Sansita+One|Satisfy|Shrikhand|Yellowtail" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Fjalla+One|Lato|Merriweather|PT+Sans|Raleway|Roboto|Slabo+27px" rel="stylesheet">
+    <link rel="shortcut icon" type="image/icon" href="/static/favicon.ico"/>
   </head>
   <body>
     <div id="container"></div>
