--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
-    <title></title>
-    <meta name="description" content="">
+    <title>Pollers</title>
     <meta name="viewport" content="width=device-width">
     <link href="/static/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Courgette|Farsan|Fugaz+One|Pacifico|Pattaya|Racing+Sans+One|Sansita+One|Satisfy|Shrikhand|Yellowtail" rel="stylesheet">
@@ -15,7 +14,7 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/bundle.js" async defer></script>
   </body>
 </html>    
         
