remove unnecessary fonts

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -8,8 +8,7 @@
     <title>Pollers</title>
     <meta name="viewport" content="width=device-width">
     <link href="/static/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Farsan|Fugaz+One|Pacifico|Pattaya|Racing+Sans+One|Sansita+One|Satisfy|Shrikhand|Yellowtail" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Fjalla+One|Lato|Merriweather|PT+Sans|Raleway|Roboto|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One|Roboto" rel="stylesheet">
     <link rel="shortcut icon" type="image/icon" href="/static/favicon.ico"/>
   </head>
   <body>
